Bug 312537 - duplicates functions when going back through wizard
Summary: duplicates functions when going back through wizard
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: templates (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR major
Target Milestone: 1.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-03 13:38 UTC by Andreas Pakulat
Modified: 2013-01-03 14:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Pakulat 2013-01-03 13:38:38 UTC
It seems the bookkeeping of the selection of overriden methods is not very well done, going back to the override-page from the data-members page and then going forward again (with or without changes, but keeping at least one of the previously selected overrides) generates code that has all method declarations and implementations duplicated that had been selected for overriding in the first run through the page.

Reproducible: Always

Steps to Reproduce:
1. Create File from template
2. Add a base class
3. on the override page select the Constructor to generate it
4. go to the data members page
5. go back to the override page, select also the destructor
6. go forward to the data members page
7. finish the wizard
Actual Results:  
A class is generated with two declarations and implementations for the constructor and one for the destructor.

Expected Results:  
Only one declaration and one implementation for the constructor should be generated.
Comment 1 Milian Wolff 2013-01-03 14:21:21 UTC
Git commit cc5426bc55d14843e9e1846f23276f13d3fcf522 by Milian Wolff.
Committed on 03/01/2013 at 15:20.
Pushed by mwolff into branch 'master'.

Do not duplicate functions when going back through new file wizard.

M  +1    -0    plugins/filetemplates/templateclassassistant.cpp

http://commits.kde.org/kdevplatform/cc5426bc55d14843e9e1846f23276f13d3fcf522