Do not duplicate functions when going back through new file wizard.

BUG: 312537